AM_CPPFLAGS = -I$(top_srcdir)/src

SUBDIRS = @PERL_INTERFACE@ @PYTHON2_INTERFACE@ @PYTHON3_INTERFACE@

SOURCES = RNA.i \
          combinatorics.i \
          commands.i \
          compare.i \
          constraints.i \
          eval.i \
          file_formats.i \
          fold_compound.i \
          grammar.i \
          inverse.i \
          mfe.i \
          model_details.i \
          params.i \
          part_func.i \
          plotting.i \
          subopt.i \
          utils.i \
          ptr2array.i \
          generic.mk

DOXYGEN_DOCUMENTATION = commands.dox \
                        combinatorics.dox \
                        constraints_hard.dox \
                        constraints_ligand.dox \
                        constraints_SHAPE.dox \
                        constraints_soft.dox \
                        eval.dox \
                        fold_compound.dox \
                        grammar.dox \
                        mfe.dox \
                        model_details.dox \
                        params.dox \
                        part_func.dox \
                        subopt.dox

EXTRA_DIST =  RNA.i \
              combinatorics.i \
              commands.i \
              compare.i \
              constraints.i \
              eval.i \
              file_formats.i \
              fold_compound.i \
              grammar.i \
              inverse.i \
              mfe.i \
              model_details.i \
              params.i \
              part_func.i \
              plotting.i \
              subopt.i \
              utils.i \
              ptr2array.i \
              generic.mk \
              $(DOXYGEN_DOCUMENTATION)

