AM_CPPFLAGS = -I$(top_srcdir)/src

SUBDIRS = @PERL_INTERFACE@ @PYTHON2_INTERFACE@ @PYTHON3_INTERFACE@

SOURCES = \
    RNA.i \
    aln_utils.i \
    basic_algorithms.i \
    boltzmann_sampling.i \
    combinatorics.i \
    commands.i \
    compare.i \
    constraints.i \
    data_structures.i \
    duplex.i \
    eval.i \
    file_formats.i \
    paths.i \
    fold_compound.i \
    grammar.i \
    inverse.i \
    loops.i \
    mfe.i \
    mfe_window.i \
    model_details.i \
    move.i \
    neighbor.i \
    params.i \
    part_func.i \
    pf_window.i \
    plotting.i \
    sequence.i \
    structure_utils.i \
    subopt.i \
    utils.i \
    walk.i \
    ptr2array.i \
    generic.mk

DOXYGEN_DOCUMENTATION = \
    aln_utils.dox \
    basic_algorithms.dox \
    boltzmann_sampling.dox \
    commands.dox \
    combinatorics.dox \
    constraints_hard.dox \
    constraints_ligand.dox \
    constraints_SHAPE.dox \
    constraints_soft.dox \
    eval.dox \
    paths.dox \
    fold_compound.dox \
    grammar.dox \
    mfe.dox \
    model_details.dox \
    neighbor.dox \
    params.dox \
    part_func.dox \
    plotting.dox \
    subopt.dox \
    walk.dox

EXTRA_DIST = \
    RNA.i \
    aln_utils.i \
    basic_algorithms.i \
    boltzmann_sampling.i \
    combinatorics.i \
    commands.i \
    compare.i \
    constraints.i \
    data_structures.i \
    duplex.i \
    eval.i \
    file_formats.i \
    fold_compound.i \
    grammar.i \
    inverse.i \
    loops.i \
    mfe.i \
    mfe_window.i \
    model_details.i \
    move.i \
    neighbor.i \
    params.i \
    part_func.i \
    paths.i \
    pf_window.i \
    plotting.i \
    sequence.i \
    structure_utils.i \
    subopt.i \
    utils.i \
    walk.i \
    ptr2array.i \
    generic.mk \
    $(DOXYGEN_DOCUMENTATION)

