info_TEXINFOS = RNAlib.texi

dist_man_MANS = RNA2Dfold.1 RNAaliduplex.1 RNAalifold.1 RNAcofold.1 RNAduplex.1 RNAeval.1\
                RNAfold.1 RNAheat.1 RNAinverse.1 RNALalifold.1 RNALfold.1\
                RNApaln.1 RNAparconv.1 RNAplfold.1 RNAplot.1 RNApvmin.1 RNAsubopt.1 RNAup.1\
                RNAPKplex.1 RNAsnoop.1 RNAplex.1 RNAdistance.1 RNApdist.1 \
                ct2db.1

# remove all generated man pages
maintainer-clean-local:
	-rm -f $(dist_man_MANS)

RNA2Dfold.1:  ../src/bin/RNA2Dfold.ggo
	$(AM_V_GEN)./help2man -N --help-option=--detailed-help\
                --opt-include=./include/ref_package.inc\
                --opt-include=./include/RNA2Dfold.inc\
                --opt-include=./include/ref_energy_par.inc\
                "./cmdlopt.sh ../src/bin/RNA2Dfold.ggo" > RNA2Dfold.1

RNAaliduplex.1:  ../src/bin/RNAaliduplex.ggo
	$(AM_V_GEN)./help2man -N --help-option=--detailed-help\
                --opt-include=./include/ref_package.inc\
                --opt-include=./include/RNAaliduplex.inc\
                --opt-include=./include/ref_energy_par.inc\
                "./cmdlopt.sh ../src/bin/RNAaliduplex.ggo" > RNAaliduplex.1

RNAalifold.1:  ../src/bin/RNAalifold.ggo
	$(AM_V_GEN)./help2man -N --help-option=--detailed-help\
                --opt-include=./include/ref_package.inc\
                --opt-include=./include/RNAalifold.inc\
                --opt-include=./include/ref_energy_par.inc\
                "./cmdlopt.sh ../src/bin/RNAalifold.ggo" > RNAalifold.1

RNAcofold.1:  ../src/bin/RNAcofold.ggo
	$(AM_V_GEN)./help2man -N --help-option=--detailed-help\
                --opt-include=./include/ref_package.inc\
                --opt-include=./include/RNAcofold.inc\
                --opt-include=./include/ref_energy_par.inc\
                "./cmdlopt.sh ../src/bin/RNAcofold.ggo" > RNAcofold.1

RNAduplex.1:  ../src/bin/RNAduplex.ggo
	$(AM_V_GEN)./help2man -N --help-option=--detailed-help\
                --opt-include=./include/ref_package.inc\
                --opt-include=./include/RNAduplex.inc\
                --opt-include=./include/ref_energy_par.inc\
                "./cmdlopt.sh ../src/bin/RNAduplex.ggo" > RNAduplex.1

RNAeval.1:  ../src/bin/RNAeval.ggo
	$(AM_V_GEN)./help2man -N --help-option=--detailed-help\
                --opt-include=./include/ref_package.inc\
                --opt-include=./include/RNAeval.inc\
                --opt-include=./include/ref_energy_par.inc\
                "./cmdlopt.sh ../src/bin/RNAeval.ggo" > RNAeval.1

RNAfold.1:  ../src/bin/RNAfold.ggo
	$(AM_V_GEN)./help2man -N --help-option=--detailed-help\
                --opt-include=./include/ref_package.inc\
                --opt-include=./include/RNAfold.inc\
                --opt-include=./include/ref_energy_par.inc\
                "./cmdlopt.sh ../src/bin/RNAfold.ggo" > RNAfold.1

RNAheat.1:  ../src/bin/RNAheat.ggo
	$(AM_V_GEN)./help2man -N --help-option=--detailed-help\
                --opt-include=./include/ref_package.inc\
                --opt-include=./include/RNAheat.inc\
                --opt-include=./include/ref_energy_par.inc\
                "./cmdlopt.sh ../src/bin/RNAheat.ggo" > RNAheat.1

RNAinverse.1:  ../src/bin/RNAinverse.ggo
	$(AM_V_GEN)./help2man -N --help-option=--detailed-help\
                --opt-include=./include/ref_package.inc\
                --opt-include=./include/RNAinverse.inc\
                --opt-include=./include/ref_energy_par.inc\
                "./cmdlopt.sh ../src/bin/RNAinverse.ggo" > RNAinverse.1

RNALalifold.1:  ../src/bin/RNALalifold.ggo
	$(AM_V_GEN)./help2man -N --help-option=--detailed-help\
                --opt-include=./include/ref_package.inc\
                --opt-include=./include/RNAalifold.inc\
                --opt-include=./include/ref_energy_par.inc\
                "./cmdlopt.sh ../src/bin/RNALalifold.ggo" > RNALalifold.1

RNALfold.1:  ../src/bin/RNALfold.ggo
	$(AM_V_GEN)./help2man -N --help-option=--detailed-help\
                --opt-include=./include/ref_package.inc\
                --opt-include=./include/RNALfold.inc\
                --opt-include=./include/ref_energy_par.inc\
                "./cmdlopt.sh ../src/bin/RNALfold.ggo" > RNALfold.1

RNApaln.1:  ../src/bin/RNApaln.ggo
	$(AM_V_GEN)./help2man -N --help-option=--detailed-help\
                --opt-include=./include/ref_package.inc\
                --opt-include=./include/RNApaln.inc\
                --opt-include=./include/ref_energy_par.inc\
                "./cmdlopt.sh ../src/bin/RNApaln.ggo" > RNApaln.1

RNAparconv.1:  ../src/bin/RNAparconv.ggo
	$(AM_V_GEN)./help2man -N --help-option=--detailed-help\
                --opt-include=./include/ref_package.inc\
                --opt-include=./include/RNAparconv.inc\
                --opt-include=./include/ref_energy_par.inc\
                "./cmdlopt.sh ../src/bin/RNAparconv.ggo" > RNAparconv.1

RNAplfold.1:  ../src/bin/RNAplfold.ggo
	$(AM_V_GEN)./help2man -N --help-option=--detailed-help\
                --opt-include=./include/ref_package.inc\
                --opt-include=./include/RNAplfold.inc\
                --opt-include=./include/ref_energy_par.inc\
                "./cmdlopt.sh ../src/bin/RNAplfold.ggo" > RNAplfold.1

RNAplot.1:  ../src/bin/RNAplot.ggo
	$(AM_V_GEN)./help2man -N --help-option=--detailed-help\
                --opt-include=./include/ref_package.inc\
                --opt-include=./include/RNAplot.inc\
                "./cmdlopt.sh ../src/bin/RNAplot.ggo" > RNAplot.1

RNApvmin.1:  ../src/bin/RNApvmin.ggo
	$(AM_V_GEN)./help2man -N --help-option=--detailed-help\
                --opt-include=./include/ref_package.inc\
                --opt-include=./include/RNApvmin.inc\
                "./cmdlopt.sh ../src/bin/RNApvmin.ggo" > RNApvmin.1

RNAsubopt.1:  ../src/bin/RNAsubopt.ggo
	$(AM_V_GEN)./help2man -N --help-option=--detailed-help\
                --opt-include=./include/ref_package.inc\
                --opt-include=./include/RNAsubopt.inc\
                --opt-include=./include/ref_energy_par.inc\
                "./cmdlopt.sh ../src/bin/RNAsubopt.ggo" > RNAsubopt.1

RNAup.1:  ../src/bin/RNAup.ggo
	$(AM_V_GEN)./help2man -N --help-option=--detailed-help\
                --opt-include=./include/ref_package.inc\
                --opt-include=./include/RNAup.inc\
                --opt-include=./include/ref_energy_par.inc\
                "./cmdlopt.sh ../src/bin/RNAup.ggo" > RNAup.1

RNAplex.1:  ../src/bin/RNAplex.ggo
	$(AM_V_GEN)./help2man -N --help-option=--detailed-help\
                --opt-include=./include/ref_package.inc\
                --opt-include=./include/RNAplex.inc\
                --opt-include=./include/ref_energy_par.inc\
                "./cmdlopt.sh ../src/bin/RNAplex.ggo" > RNAplex.1

RNAPKplex.1:  ../src/bin/RNAPKplex.ggo
	$(AM_V_GEN)./help2man -N --help-option=--detailed-help\
                --opt-include=./include/ref_package.inc\
                --opt-include=./include/RNAPKplex.inc\
                --opt-include=./include/ref_energy_par.inc\
                "./cmdlopt.sh ../src/bin/RNAPKplex.ggo" > RNAPKplex.1

RNAsnoop.1:  ../src/bin/RNAsnoop.ggo
	$(AM_V_GEN)./help2man -N --help-option=--detailed-help\
                --opt-include=./include/ref_package.inc\
                --opt-include=./include/RNAsnoop.inc\
                --opt-include=./include/ref_energy_par.inc\
                "./cmdlopt.sh ../src/bin/RNAsnoop.ggo" > RNAsnoop.1

RNAdistance.1:  ../src/bin/RNAdistance.ggo
	$(AM_V_GEN)./help2man -N --help-option=--detailed-help\
                --opt-include=./include/ref_package.inc\
                --opt-include=./include/RNAdistance.inc\
                "./cmdlopt.sh ../src/bin/RNAdistance.ggo" > RNAdistance.1

RNApdist.1:  ../src/bin/RNApdist.ggo
	$(AM_V_GEN)./help2man -N --help-option=--detailed-help\
                --opt-include=./include/ref_package.inc\
                --opt-include=./include/RNApdist.inc\
                --opt-include=./include/ref_energy_par.inc\
                "./cmdlopt.sh ../src/bin/RNApdist.ggo" > RNApdist.1

ct2db.1:  ../src/Utils/ct2db.ggo
	$(AM_V_GEN)./help2man -N --help-option=--detailed-help\
                --opt-include=./include/ref_package.inc\
                "./cmdlopt.sh ../src/Utils/ct2db.ggo" > ct2db.1



