
energy_parameter_files = \
   rna_turner1999.par \
   rna_turner2004.par \
   rna_andronescu2007.par \
   dna_mathews1999.par \
   dna_mathews2004.par \
   rna_langdon2018.par \
   rna_misc_special_hairpins.par


pkgdata_DATA = \
    2Dlandscape_mfe.gri \
    2Dlandscape_pf.gri \
    $(energy_parameter_files) \
    2Dlandscape.R


EXTRA_DIST = \
    $(pkgdata_DATA) \
    parameter_files.txt

