
energy_parameter_files = \
    rna_turner1999.par \
    rna_turner2004.par \
    rna_andronescu2007.par \
    dna_mathews1999.par \
    dna_mathews2004.par \
    rna_langdon2018.par \
    rna_misc_special_hairpins.par \
    rna_mod_7DA_parameters.json \
    rna_mod_inosine_parameters.json \
    rna_mod_m5C_parameters.json \
    rna_mod_m6A_parameters.json \
    rna_mod_pseudouridine_parameters.json \
    rna_mod_purine_parameters.json \
    rna_mod_dihydrouridine_parameters.json \
    rna_mod_template_parameters.json


pkgdata_DATA = \
    2Dlandscape_mfe.gri \
    2Dlandscape_pf.gri \
    $(energy_parameter_files) \
    2Dlandscape.R


EXTRA_DIST = \
    $(pkgdata_DATA) \
    parameter_files.txt

